<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        tools:context=".view.HomeFragment" >

        <Button
            android:id="@+id/customerBtn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/customerBtn_label" />

        <Button
            android:id="@+id/paymentBtn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/paymentBtn_label" />

        <Button
            android:id="@+id/newCustomerBtn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/newCustomerBtn_label" />

        <Button
            android:id="@+id/newPaymentBtn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/newPaymentBtn_label" />

    </LinearLayout>
</FrameLayout>
