<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailFragment">

    <TextView
        android:id="@+id/id_det_label"
        style="@style/DetailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="viewStart"
        android:text="@string/detail_id"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id_det"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="viewStart"
        tools:text="1"
        app:layout_constraintTop_toBottomOf="@+id/id_det_label"/>

    <TextView
        android:id="@+id/name_det_label"
        style="@style/DetailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="viewStart"
        android:text="@string/detailName"
        app:layout_constraintTop_toBottomOf="@+id/id_det"/>

    <TextView
        android:id="@+id/name_det"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="viewStart"
        tools:text="Omar"
        app:layout_constraintTop_toBottomOf="@+id/name_det_label"/>

    <TextView
        android:id="@+id/middleName_det_label"
        style="@style/DetailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        android:text="@string/detailMiddleName"
        app:layout_constraintTop_toBottomOf="@+id/name_det"/>

    <TextView
        android:id="@+id/middleName_det"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        tools:text="Enoc"
        app:layout_constraintTop_toBottomOf="@+id/middleName_det_label"/>

    <TextView
        android:id="@+id/lastName_det_label"
        style="@style/DetailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        android:text="@string/detailLastName"
        app:layout_constraintTop_toBottomOf="@+id/middleName_det"/>

    <TextView
        android:id="@+id/lastName_det"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        tools:text="Manzo"
        app:layout_constraintTop_toBottomOf="@+id/lastName_det_label"/>

    <TextView
        android:id="@+id/secondLastName_det_label"
        style="@style/DetailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        android:text="@string/detailSecondLastName"
        app:layout_constraintTop_toBottomOf="@+id/lastName_det"/>

    <TextView
        android:id="@+id/secondLastName_det"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        tools:text="Morales"
        app:layout_constraintTop_toBottomOf="@+id/secondLastName_det_label"/>

    <TextView
        android:id="@+id/date_det_label"
        style="@style/DetailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        android:text="@string/detail_birthdate"
        app:layout_constraintTop_toBottomOf="@+id/secondLastName_det"/>

    <TextView
        android:id="@+id/date_det"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        tools:text="08/12/1994"
        app:layout_constraintTop_toBottomOf="@+id/date_det_label"/>

    <TextView
        android:id="@+id/gender_det_label"
        style="@style/DetailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        android:text="@string/detailGender"
        app:layout_constraintTop_toBottomOf="@+id/date_det"/>

    <TextView
        android:id="@+id/gender_det"
        style="@style/DetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_margin="8dp"
        tools:text="Masculino"
        app:layout_constraintTop_toBottomOf="@+id/gender_det_label"/>

    <Button
        android:id="@+id/payments_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/detailBtnPay"
        app:layout_constraintTop_toBottomOf="@+id/gender_det"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/newPayment_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/detailBtnNewPay"
        app:layout_constraintTop_toBottomOf="@+id/gender_det"
        app:layout_constraintStart_toEndOf="@+id/payments_button"
        app:layout_constraintEnd_toStartOf="@+id/edit_button"/>

    <Button
        android:id="@+id/edit_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/detailBtnEdit"
        app:layout_constraintTop_toBottomOf="@+id/gender_det"
        app:layout_constraintStart_toEndOf="@+id/newPayment_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>