<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".view.CustomerFragment">
    
    <TextView
        android:id="@+id/name_header"
        style="@style/Header"
        android:layout_marginStart="8dp"
        android:text="@string/name_header_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/lastName_header"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastName_header"
        style="@style/Header"
        android:layout_below="@+id/name_header"
        android:layout_marginStart="8dp"
        android:text="@string/lastName_header_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/secondLastName_header"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/name_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondLastName_header"
        style="@style/Header"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/secondLastName_header_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/lastName_header"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondLastName_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.example.omarapplication.CustomerFragment"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintTop_toBottomOf="@+id/name_header"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/fragment_customer_item" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/addFab_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
