<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PaymentFragment">

    <TextView
        android:id="@+id/date_header"
        style="@style/Header"
        android:layout_marginStart="8dp"
        android:text="@string/date_header_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/amount_header"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/amount_header"
        style="@style/Header"
        android:layout_below="@+id/date_header"
        android:layout_marginStart="8dp"
        android:text="@string/amount_header_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/customerId_header"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/date_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customerId_header"
        style="@style/Header"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/customerId_header_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/amount_header"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customerId_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.example.omarapplication.PaymentFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_payment_item" />


</androidx.constraintlayout.widget.ConstraintLayout>

